Fix wz-menu z-index

--- a/public/less/common.less
+++ b/public/less/common.less
@@ -163,6 +163,10 @@
   border: 1px solid #d9d9d9 !important;
 }
 
+wz-menu{
+  z-index: 100;
+}
+
 .md-toolbar-tools{
   height: 50px!important;
   max-height: 50px!important;
